--- a/style.css
+++ b/style.css
@@ -1,11 +1,14 @@
 body{
     background-color: aliceblue;
+    width: 100%;
+    padding: 0%;
+    margin: 0;
     
 }
 header{
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-around;
 
 }
 .nav{
@@ -14,7 +17,27 @@ header{
 }
 .container{
     width: 100%;
+    display: flex;
+
 }
 .logo{
     width: 100%;
+    display: flex;
+    justify-content: center;
+    
+}
+.logo-caracol{
+    width: 80%;
+}
+footer {
+    background-image: url(/imagenes/olas2.png);
+    width: 100%;
+    height: 500px;
+    display: flex;
+    
+}
+.iconos{
+    width: 19%;
+    display: flex;
+    justify-content: space-evenly;
 }
