--- a/style.css
+++ b/style.css
@@ -21,7 +21,10 @@ header{
 
 }
 .menu-hamburguesa{
-    margin: 7%;
+    margin-top: 1%;
+    margin-right: 7%;
+    margin-bottom: 7%;
+    margin-left: 7%;
 }
 .logo{
     width: 100%;
