--- a/style.css
+++ b/style.css
@@ -11,6 +11,9 @@ header{
     justify-content: space-between;
 
 }
+.menu-desktop{
+    display: none;
+}
 .nav{
     display: flex;
     flex-direction: row;
@@ -20,7 +23,7 @@ header{
     display: flex;
 
 }
-.menu-hamburguesa{
+.menuHamburgues{
     margin-top: 1%;
     margin-right: 7%;
     margin-bottom: 7%;
@@ -36,11 +39,13 @@ header{
     width: 90%;
 }
 footer {
-    background-image: url(/imagenes/olas2.png);
+    background-image: url(/imagenes/mar.jpg);
     width: 100%;
-    height: 500px;
+    height: 158px;
     display: flex;
     justify-content: center;
+    padding: 0%;
+    margin: 0%;
 
     
 }
@@ -48,4 +53,16 @@ footer {
     width: 19%;
     display: flex;
     justify-content: space-evenly;
+}
+@media screen and (min-width: 600px) {
+    body{
+        background-color: red;
+    }
+    .icon-hamburger{
+        display:none;
+    
+    }
+    .menu-desktop{
+        display: flex;
+    }
 }
