--- a/style.css
+++ b/style.css
@@ -7,9 +7,8 @@ body{
 }
 header{
     display: flex;
-    align-items: center;
-    justify-content: space-between;
-
+    justify-content: flex-end;
+    margin: 20px;
 }
 .menu-desktop{
     display: none;
@@ -23,7 +22,7 @@ header{
     display: flex;
 
 }
-.menuHamburgues{
+.icon-hamburgues{
     margin-top: 1%;
     margin-right: 7%;
     margin-bottom: 7%;
@@ -53,6 +52,12 @@ footer {
     width: 19%;
     display: flex;
     justify-content: space-evenly;
+}
+.menu-resposive{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background: lightblue;
 }
 @media screen and (min-width: 600px) {
     body{
