--- a/style.css
+++ b/style.css
@@ -59,9 +59,26 @@ footer {
 }
 .menu-resposive{
     display: flex;
-    flex-direction: column;
-    align-items: center;
     background: lightblue;
+    height: 77%;
+    z-index: 2;
+    left: 10%;
+    bottom: 20%;
+    width: 80%;
+    border-radius: -8px;
+    background-color: #93c6c9;
+    box-shadow: 0px 0px 30px #5e989f;
+    position: fixed;
+    align-items: center;
+    flex-direction: column;
+    justify-content: space-evenly;
+}
+.fab{ 
+    color: black;
+}
+.fab:hover{
+    color: rgb(89, 182, 190);
+    cursor: pointer;
 }
 @media screen and (min-width: 600px) {
     body{
