--- a/style.css
+++ b/style.css
@@ -62,16 +62,24 @@ footer {
     background: lightblue;
     height: 77%;
     z-index: 2;
-    left: 10%;
+    left: 6%;
     bottom: 20%;
     width: 80%;
-    border-radius: -8px;
+    border-radius: 8px;
     background-color: #93c6c9;
-    box-shadow: 0px 0px 30px #5e989f;
+    box-shadow: 0px 0px 30px #2881b4;
     position: fixed;
     align-items: center;
     flex-direction: column;
     justify-content: space-evenly;
+}
+.menu-resposive a{
+    color: rgb(0 2 3);
+    text-decoration: none;
+}
+.menu-resposive a:hover{
+    color: white;
+    cursor: pointer;
 }
 .fab{ 
     color: black;
