menus de dasayuno y comida

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -13,11 +13,12 @@ header{
 .menu-desayunos{
     display: flex;
     div{
-        width: 50%;
+        width: 40%;
+       
     }
 }
 p{
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-start;
 }
