--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,7 @@ header {
 }
 
 .menu-desayunos div {
-  width: 50%;
+  width: 40%;
 }
 
 p {
@@ -33,8 +33,8 @@ p {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
 }
 /*# sourceMappingURL=style.css.map */
