cambios de la pagina

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -12,10 +12,13 @@ header{
 }
 .menu-desayunos{
     display: flex;
-    div{
-        width: 40%;
-       
-    }
+   
+}
+.menu{
+    width: 60%;
+}
+.precios{
+    width: 20%;
 }
 p{
     display: flex;
