--- a/css/style.css
+++ b/css/style.css
@@ -22,8 +22,12 @@ header {
   display: flex;
 }
 
-.menu-desayunos div {
-  width: 40%;
+.menu {
+  width: 60%;
+}
+
+.precios {
+  width: 20%;
 }
 
 p {
