--- a/css/bebidas.css
+++ b/css/bebidas.css
@@ -56,4 +56,22 @@ header {
           align-items: center;
   margin: 4%;
 }
+
+@media screen and (max-width: 500px) {
+  body {
+    background-color: aliceblue;
+  }
+  .cont-principal {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .contenedor {
+    width: 60%;
+  }
+}
 /*# sourceMappingURL=bebidas.css.map */
