--- a/sass/desayunos.scss
+++ b/sass/desayunos.scss
@@ -19,10 +19,19 @@ header{
     width: 60%;
 }
 .precios{
-    width: 20%;
+    width: fit-content;
 }
 p{
     display: flex;
     align-items: center;
     justify-content: flex-start;
+}
+@media screen and (max-width: 610px){
+    body{
+        background-color: aliceblue;
+        font-size: 10px ;
+    }
+    .menu{
+        width: 80%;
+    }
 }
