--- a/sass/comida.scss
+++ b/sass/comida.scss
@@ -25,3 +25,13 @@ header{
 .cont-recipiente{
     width: 60%;
 }
+@media screen and (max-width: 610px){
+    body{
+        background-color: aliceblue;
+        font-size: 12px ;
+    }
+    .cont-recipiente{
+        width: 80%;
+    }
+
+}
